# darwin

./: .gitignore  .gitleaks.toml  .gitleaksignore  CONTRIBUTING.md  LICENSE  LIVE_STATUS.md  README.md
contracts/: foundry.toml
docs/: ARBITRUM_SEPOLIA.md  AUDIT_READINESS.md  BASE_APP_REGISTRATION.md  COMMUNITY_BOOTSTRAP.md  CUSTOM_DOMAIN_SETUP.md  DARWIN_NODE.md  DRW_ISSUANCE.md  EXTERNAL_CANARY_CHECKLIST.md  GOVERNANCE_RECOVERY.md  HOSTING_ARCHITECTURE.md  MARKET_BOOTSTRAP.md  OPERATOR_QUICKSTART.md  PI_TUNNEL_HOSTING.md  SECURITY.md  STARTER_COHORT.md  THREAT_MODEL.md  VNEXT_DEPLOYMENT.md  VNEXT_GOVERNANCE.md  VNEXT_PROMOTION.md
ops/: Dockerfile.overlay  arbitrum_sepolia.env.example  base_sepolia.env.example  bootstrap_arbitrum_sepolia_drw.sh  bootstrap_dev.sh  build_drw_epoch_distribution.py  (+80 more)
sim/: pyproject.toml
sim/configs/: baseline.yaml
sim/darwin_sim/adapters/: synthetic_realistic.py  uniswap_v3_csv.py  uniswap_v3_rpc.py
sim/darwin_sim/cli/: darwinctl.py
sim/darwin_sim/core/: config.py  rng.py  types.py
sim/darwin_sim/experiments/: runner.py  suite.py  sweep.py
sim/darwin_sim/intents/: synth.py
sim/darwin_sim/market/: rebalance.py
sim/darwin_sim/normalize/: pipeline.py
sim/darwin_sim/routing/: control.py
sim/darwin_sim/scoring/: fitness.py
sim/darwin_sim/sdk/: accounts.py  deployments.py  intents.py  pq_crypto.py  role_audit.py  wallets.py
sim/darwin_sim/species/: base.py  s0_sentinel.py  s1_batch.py  s2_rfq_oracle.py
sim/darwin_sim/watcher/: archive.py  replay.py
sim/data/raw/: raw_swaps.csv
sim/tests/: test_end_to_end.py
(+106 files in other folders)
